successfully passes a string from python to server to client

--- a/client.html
+++ b/client.html
@@ -22,7 +22,7 @@
 			objectSocket.on('message', function(objectData) {
 				console.log('client objectData',objectData);
 				jQuery('#output')
-					.prepend(objectData.data)
+					.prepend(objectData.text + '\n')
 				;
       });
       
