--- a/client.html
+++ b/client.html
@@ -8,13 +8,22 @@
 		<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
 
 		<script type="text/javascript" src="http://localhost:8080/socket.io/socket.io.js"></script>
+
+		<style type="text/css">
+		  pre {
+				white-space: pre-wrap;
+			}
+		</style>
+
 	</head>
 	<body>
 		<select id="clients"></select>
 		<input id="message" type="text" placeholder="message">
 		<input id="submit" type="button" value="submit">
 		<br>
+		<div>
 		<pre id="output"></pre>
+		</div>
 
 		<script type="text/javascript">
 			var objectSocket = io.connect('http://localhost:8080/');
@@ -22,7 +31,7 @@
 			objectSocket.on('message', function(objectData) {
 				console.log('client objectData',objectData);
 				jQuery('#output')
-					.prepend(objectData.text + '\n')
+					.prepend('> ' + objectData.text + '\n\n')
 				;
       });
       
