try merging with updated lib

--- a/src/client.html
+++ b/src/client.html
@@ -22,8 +22,9 @@
 		<input id="submit" type="button" value="submit">
 		<br>
 		<pre id="output"></pre>
+		<script src="client.js"></script>
 
-		<script type="text/javascript">
+		<!-- <script type="text/javascript">
 			var objectSocket = io.connect('http://localhost:8080/');
 
 			objectSocket.on('message', function(objectData) {
@@ -43,6 +44,6 @@
         })
       ;
 
-		</script>
+		</script> -->
 	</body>
 </html>
