Input message functionality and console.logs

--- a/src/client.html
+++ b/src/client.html
@@ -112,22 +112,35 @@
 
 	<!-- <script src="client.js"></script> -->
 	<script type="text/javascript">
-		// var objectSocket = io.connect('http://localhost:8080/');
-		var objectSocket = io.connect('http://robochat.appspot.com');
+		
+		var start = Date.now();
+
+		// Timestamp for debug
+		function getTime() {
+			return (Date.now() - start) / 1000;
+		};
+		
+		var objectSocket = io.connect('http://localhost:8080/', () => {
+			// console.log("objectSocket");
+			console.log(getTime(), "objectSocket");
+		});
+		// var objectSocket = io.connect('http://robochat.appspot.com');
 
 		objectSocket.on('message', function (objectData) {
-			console.log('client objectData', objectData);
+			// console.log('client objectData', objectData);
+			console.log(getTime(), 'client objectData', objectData);
 			$('#chat-messages')
 				.prepend("<p>" + "<strong>" + objectData.username + ": </strong>" + objectData.text + "</p>")
 				;
 		});
 
     objectSocket.on('clientDisconnect', function(objectData) {
-      console.log('clientDisconnect');
+      // console.log('clientDisconnect');
+      console.log(getTime(), 'clientDisconnect');
 			$('#chat-messages')
 				.prepend("<p>" + "disconnect" + "</p>")
 				;
-    });
+		});
 
 		$('#submit')
 			.on('click', function () {
@@ -136,15 +149,30 @@
 						.prepend("<p><strong>Error: </strong>Select a guest!</p>");
 					return;
 				}
-				console.log('who', $("input[type='radio']:checked").attr('id'));
-				console.log('message', $('#message').val());
+				// console.log('who', $("input[type='radio']:checked").attr('id'));
+				// console.log('message', $('#message').val());
+				console.log(getTime(), 'who', $("input[type='radio']:checked").attr('id'));
+				console.log(getTime(), 'message', $('#message').val());
 				$("#chat-messages").prepend("<p>" + "<strong>You: </strong>" + $('#message').val()) + "</p>";
 				objectSocket.emit('message', {
 					'strWho': $("input[type='radio']:checked").attr('id'),
 					'strQuery': $('#message').val()
 				});
-				console.log('click');
-			});
+				// console.log('click');
+				console.log(getTime(), 'click');
+				// Clear field
+				$('#message').val('');
+			})
+		;
+		
+		$('.input-group').keypress( (event) => {
+			if (event.keyCode == 13) {
+				// console.log("'enter' pressed");
+				console.log(getTime(), "'enter' pressed");
+				event.preventDefault();
+				$('#submit').click();
+			}
+		});
 
 	</script>
 
