--- a/src/client.html
+++ b/src/client.html
@@ -120,11 +120,11 @@
 			return (Date.now() - start) / 1000;
 		};
 		
-		var objectSocket = io.connect('http://localhost:8080/', () => {
-			// console.log("objectSocket");
-			console.log(getTime(), "objectSocket");
-		});
-		// var objectSocket = io.connect('http://robochat.appspot.com');
+		var objectSocket = io.connect('http://robochat.appspot.com');
+		// var objectSocket = io.connect('http://localhost:8080/');
+		// var objectSocket = io.connect('http://localhost:8080/', () => {
+		// 	console.log(getTime(), "objectSocket");
+		// });
 
 		objectSocket.on('message', function (objectData) {
 			// console.log('client objectData', objectData);
