--- a/src/client.html
+++ b/src/client.html
@@ -10,6 +10,7 @@
 	<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
 
 	<!-- <script type="text/javascript" src="http://localhost:8080/socket.io/socket.io.js"></script> -->
+	<!-- <script type="text/javascript" src="http://robochat.appspot.com/socket.io/socket.io.js"></script> -->
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/2.0.2/socket.io.js"></script>
 
 	<link rel="stylesheet" type="text/css"
