--- a/src/client.html
+++ b/src/client.html
@@ -9,8 +9,9 @@
 
 	<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
 
-	<!-- <script type="text/javascript" src="http://localhost:8080/socket.io/socket.io.js"></script> -->
-	<script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/2.0.2/socket.io.js"></script>
+	<script type="text/javascript" src="http://localhost:8080/socket.io/socket.io.js"></script>
+	<!-- <script type="text/javascript" src="http://robochat.appspot.com/socket.io/socket.io.js"></script> -->
+	<!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/2.0.2/socket.io.js"></script> -->
 
 	<link rel="stylesheet" type="text/css"
 		href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.3.1/css/bootstrap.min.css" />
@@ -120,8 +121,8 @@
 			return (Date.now() - start) / 1000;
 		};
 		
-		var objectSocket = io.connect('http://robochat.appspot.com');
-		// var objectSocket = io.connect('http://localhost:8080/');
+		// var objectSocket = io.connect('http://robochat.appspot.com');
+		var objectSocket = io.connect('http://localhost:8080/');
 		// var objectSocket = io.connect('http://localhost:8080/', () => {
 		// 	console.log(getTime(), "objectSocket");
 		// });
